--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Frank.jpg" alt="Frank profile picture"></td>
+      <td><img src="images/frank.jpg" alt="Frank profile picture"></td>
       <td>
         <h1>Frank Adamczyk</h1>
         <p><em>Founder and CTO of the <Strong><a href="https://www.appbrewery.co">App Brewery</a></Strong>.</em></p>
